--- a/mimall3/test.html
+++ b/mimall3/test.html
@@ -8,12 +8,18 @@
     <style>
         a{
             margin-right: 50px;
+            width: 300px;
+            height: 200px;
+            display: inline-block;
         }
+        
     </style>
 </head>
 <body>
-    <a href="">111111</a>
+    <div class="wrapper">
+        <a href="">111111</a>
     <a href="">22222</a>
     <a href="">3333</a>
+    </div>
 </body>
 </html>
